--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ a {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 912px) {
     main {
         text-align: center;
     }
@@ -155,7 +155,7 @@ a {
 
 }
 
-@media (max-width: 320px) {
+@media (min-width: 360px) {
     .meeting {
         font-size: 14px;
     }
@@ -170,12 +170,59 @@ a {
 
     p {
         font-size: 15px;
-        text-align: justify;
+        text-align: center;
+    }
+
+    h3 {
+        margin-bottom: -335px;
+    }
+
+    #overview {
+        margin-top: 25px;
     }
 
     img {
         height: 275px;
         width: 275px;
+    }
+
+}
+
+@media (min-width: 280px) {
+
+    .navbar {
+        height: 85px;   
+    }
+    .meeting {
+        font-size: 13px;
+    }
+
+    h1 {
+        padding-top: 5px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    h3 {
+        margin-bottom: -335px;
+    }
+
+    #overview {
+        margin-top: 25px;
+        font-size: 15px;
+        font-weight: 200;
+    }
+
+    img {
+        height: 250px;
+        width: 250px;
     }
 
 }
